--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "files": [
     "default.js",
-    "universe-extended.js"
+    "universe-extended.js",
+    "prettier.js"
   ],
   "devDependencies": {
     "eslint": "^8.22.0"
   },
   "dependencies": {
     "eslint-config-universe": "^11.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1"
   }
